# rust_tui_for_anilist

./: .gitignore  Cargo.toml  README.md  todo
qraphql/: get_anime.graphql  get_basic_viewer.graphql  get_current_media.graphql  get_media.graphql  get_media_details.graphql  get_user_media_list.graphql
src/: anilist.rs  app.rs  app_helper_structs.rs  auth.rs  keybinds.rs  main.rs  ui.rs  utils.rs
src/ui/: footer.rs  header.rs  main_frame.rs  mod.rs  sidebar.rs
src/ui/content/: browse.rs  details.rs  draw_media_list.rs  error_popup.rs  home.rs  language_popup.rs  mod.rs
