[package]
name = "rust_tui_for_anilist"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
graphql_client = "0.16.0"
ratatui = "0.30.0"
reqwest = {version="0.13.3", features = ["blocking", "json"]}
tokio = {version = "1.52.2", features = ["full"]}
chrono = "0.4.44"
tui-big-text = "0.8.4"
serde_json = "1.0.149"
ratatui-image = "11.0.2"
moka = {version="0.12.15", features = ["future"]}
image = "0.25.10"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
tracing-appender = "0.2.5"
